[package]
name = "drcon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
clap = { version = "3.2.20", features = ["derive"] }
hex = "0.4"
hex-literal = "0.3.4"
log4rs = "1.1"
log = "0.4"
bytes = "1"
pnet = "0.29.0"
toml = "0.4.2"
serde = "*"
